# molecule_generation

./: .gitignore  README.md
REINVENT4/: start.sh
REINVENT4/reinvent_plugins/components/: comp_bioactivity.py
freedpp/: 4j1r.pdbqt
freedpp/fcd_torch/: __init__.py
freedpp/freed_usp7-ffreed/fcd_torch/: fcd.py  keras2pytorch.py  utils.py
freedpp/freed_usp7-ffreed/moses/vae/: model.py
freedpp/moses/vae/: trainer.py
mol_dqn/: naive_dqn.json  optimizers.py  pyproject.toml  start.sh
mol_dqn/chemgraph/: events.out.tfevents.1701958497.fa688d6beba5.34574.0.v2  events.out.tfevents.1701958554.fa688d6beba5.34740.0.v2  events.out.tfevents.1702022181.c450386298f2.8858.0.v2  events.out.tfevents.1702022417.c450386298f2.10383.0.v2  events.out.tfevents.1702023675.56b918797895.2539.0.v2  events.out.tfevents.1702023749.56b918797895.3080.0.v2  events.out.tfevents.1702209789.52b16d8e6222.6095.0.v2  target_mic.py
scores/: eval.py  installation.txt  libinvent_results.ipynb  mol_gen_results.ipynb  scores_environment.yml
