[tool.poetry]
name = "mol-dqn"
version = "0.1.0"
description = ""
authors = ["None"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
absl-py = "2.0.0"
networkx = "3.1"
numpy = "1.24.3"
rdkit = "2023.09.1"
tensorflow = "2.13.1"
install = "^1.3.5"
scipy = "1.10.1"
gym = "0.26.2"
tf-slim = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
